# companion

./: .gitignore  OPTIMIZATION_CLI.md  README.md  main.py  optimize.py  pyproject.toml
agent_server/: .env.example  .gitignore  CONFIGURATION.md  README.md  dag_memory_analyzer.py  kg_experiment.py  pyproject.toml
agent_server/docs/: SELF_MODIFICATION_DESIGN.md  status.md
agent_server/src/agent/: agent_event_manager.py  api_server.py  api_types.py  config.py  conversation_persistence.py  core.py  custom_format_parser.py  custom_format_schema.py  event_emitter.py  image_generation.py  llm.py  logging_config.py  paths.py  progress.py  queue_event_emitter.py  state.py  state_initialization.py  structured_llm.py  timeit.py  types.py  ui_output.py
client/: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
client/src/: App.tsx  agent_events.ts  client.ts  index.css  types.ts
client/src/components/: AutoWakeupToggle.tsx  ChatHeader.tsx  ChatInput.tsx  ChatInterface.tsx  ChatMessages.tsx  ErrorBoundary.tsx  FileUploadButton.tsx  ImagePreviewGrid.tsx  MessageItem.tsx  ModelSettings.tsx  RoleplayText.tsx  StreamItem.tsx  SummaryCard.tsx  ThoughtBubble.tsx  Timeline.tsx  ToolDisplay.tsx  UsernameSettings.tsx
client/src/contexts/: UsernameContext.tsx
client/src/hooks/: useAgentWebSocket.ts  useConversation.ts  (+8 more)
docs/: REASONING_INTEGRATION_PLAN.md  action-based-architecture.md  chloe_design.md  long-term-memory-design.md  status.md  vision.md
src/: api_server.py
src/agent/: __init__.py  agent_events.py  api_server.py  api_types.py  character_state.py  chloe_state.py  config.py  conversation_history.py  conversation_persistence.py  core.py  custom_format_schema.py  image_generation.py  llm.py  message.py  paths.py  progress.py  state.py  state_analysis.py  state_initialization.py  streaming.py  streaming_queue.py  structured_llm.py  types.py
tests/: test_agent_behavior.py  test_agent_streaming.py  test_api.py  test_auto_summarization.py  test_configs.py  test_message_conversion.py  test_presenters.py  test_roleplay_presenter_whitespace.py  test_streaming.py  test_summarization_quality.py
tests/integration/: test_api.py  test_image_generation_integration.py  test_summarization_quality.py
tests/unit/: test_agent_behavior.py  test_agent_streaming.py  test_auto_summarization.py  test_callback_tools.py  test_configs.py  test_image_generation.py  test_message_conversion.py  test_roleplay_presenter_whitespace.py  test_streaming.py  test_trigger_streaming.py
(+261 files in other folders)
